--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav class="navBar">
             
             <a class = "nav-link" href ="#home"> Home </a>
-            <a class = "nav-link" href="#photos"> photos </a>
-            <a class = "nav-link" href="#about_us"> About Us </a>
+            <a class = "nav-link" href="#photos"> Index </a>
+            <a class = "nav-link" href="#about_us"> Contact Us </a>
         </nav>
     </header>
 
